--- a/credits.html
+++ b/credits.html
@@ -9,5 +9,6 @@
         VB.NET & HTML: Max Schindler</p>
         <p>Graphic Design: <br>
         Browser logo, files logo, and video player logo: Garrison Roberts [https://www.youtube.com/channel/UCLHV_KVMCmXtHkUYAWhM9gA] </p>
+        <p>"Game On" wallpaper, and cursor: Garrison Roberts [https://www.youtube.com/channel/UCLHV_KVMCmXtHkUYAWhM9gA]</p>
     </body>
 </html>
